- Use standard shipped base64 decoder - Provide more loggin about used pemfile